# python-tcod

./: .codeclimate.yml  .codecov.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CHANGELOG.txt  CONTRIBUTING.md  Downloads.md  LICENSE.txt  MANIFEST.in  ProjectHome.md  README.rst  README.rst.txt  README.txt  appveyor.yml  build_libtcod.py  build_sdl.py  codecov.yml  desktop.ini  libtcodpy.py  parse_sdl2.py  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  stdeb.cfg  tox.ini  unittest.cfg
.appveyor/: install_python.ps1
.github/: zizmor.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: parse-sdl.yml  python-lint.yml  python-package-macos.yml  python-package.yml  release-on-tag.yml
.travis/: before_install.sh  install_openmp.sh  install_python.sh  launchpad.key.enc  upload_ppa.sh
Frameworks/: SDL-1.2.14.dmg
debian/: changelog  control  copyright  rules  watch
dependencies/fake_libc_include/: _fake_defines.h  _fake_typedefs.h
dependencies/libtcod/: samples_py.py
dependencies/libtcod-1.5.1/: LIBTCOD-LICENSE.txt  libtcod-CHANGELOG.txt  libtcodpy.py  tutorial3.py
dev/: benchmark.py  noise_gen.py  runRegressionTest.py  run_regression_test.py  samples.py  sdl_hook_test.py  stressTest.py  stress_test.py
docs/: Makefile  api-objects.txt  api_ref.rst  changelog.rst  class-tree.html  conf.py  epilog.rst  epydoc-log.html  epydoc.config  faq.rst  getting_started.rst  glossary.rst  help.html  identifier-index.html  index.html  index.rst  installation.rst  libtcodpy.rst  make.bat  module-tree.html  prolog.rst  rebuild_docs.bat  redirect.html  requirements.txt  since-index.html  tcod.rst  tcod_ref.rst  tdl-module.html  tdl-pysrc.html  tdl.Console-class.html  tdl.TDLError-class.html  tdl.Typewriter-class.html  tdl.Window-class.html  tdl._BaseConsole-class.html  tdl._MetaConsole-class.html  tdl.event-module.html  tdl.event-pysrc.html  tdl.event.App-class.html  tdl.event.Event-class.html  tdl.event.KeyDown-class.html  (+22 more)
docs/_templates/: page.html
docs/sdl/: audio.rst  joystick.rst  mouse.rst  render.rst  video.rst
docs/tcod/: bsp.rst  charmap-reference.rst  console.rst  context.rst  event.rst  getting-started.rst  image.rst  los.rst  map.rst  noise.rst  path.rst  random.rst  render.rst  tileset.rst
docs/tutorial/: index.rst  notice.rst  part-00.rst  part-01.rst  part-02.rst  part-03.rst
documentation/: api-objects.txt  class-tree.html  epydoc-log.html  help.html  identifier-index.html  module-tree.html  redirect.html  tdl-module.html  tdl-pysrc.html  tdl.Console-class.html  tdl.TDLError-class.html  tdl.Window-class.html  tdl._MetaConsole-class.html  tdl.__tcod-pysrc.html  tdl.__tcod._Key-class.html  tdl.__tcod._Mouse-class.html  tdl.event-module.html  tdl.event-pysrc.html  tdl.event.App-class.html  tdl.event.Event-class.html  tdl.event.KeyDown-class.html  tdl.event.KeyEvent-class.html  tdl.event.KeyUp-class.html  tdl.event.MouseButtonEvent-class.html  tdl.event.MouseDown-class.html  tdl.event.MouseMotion-class.html  tdl.event.MouseUp-class.html  tdl.event.Quit-class.html  tdl.event.html  tdl.html  tdl.tcod.html  toc-everything.html  toc-tdl-module.html  toc-tdl.__tcod-module.html  toc-tdl.event-module.html
examples/: .isort.cfg  README.md  audio_tone.py  cavegen.py  custrender.py  eventget.py  eventget_tcod.py  eventget_tdl.py  fixed_aspect.py  framerate.py  helloWorld.py  hello_world.py  interactive.py  life.py  samples_libtcodpy.py  samples_py.py  samples_tcod.py  sdl-hello-world.py  sdlevent.py  stress_test.py  thread_jobs.py  ttf.py
examples/experimental/: custrender.py  resizable_console.py
examples/termbox/: README.md  termbox.py  termboxtest.py
examples/tutorial/: 1-Basics.py  2-Movement.py  part 1 - moving around.py  part 10 - main menu and saving.py  part 11 - dungeon levels and character progression.py  part 12 - monster and item progression.py  part 13 - adventure gear.py  part 2 - the map.py  part 3 - dungeon generator.py  part 4 - exploration.py  part 5 - preparing for combat.py  part 6 - untimely deaths.py  part 7 - GUI.py  part 8 - items and inventory.py  part 9 - spells and ranged combat.py
fonts/: README.md
fonts/X11/: LICENCES.txt  README-TDL.txt  README.md  bdf2png.py
fonts/libtcod/: README.txt
include/: libtcod.h  namegen.h  namegen.hpp  sys.h
libtcod-cffi/: __init__.py  tdl_cdef.h  tdl_source.c
scripts/: README.md  generate_charmap_table.py  get_release_description.py  tag_release.py
src/: __init__.py  _color.py  _console.py  _dijkstra.py  _line.py  _noise.py  _parser.py  _path.py  _sys.py  bsp.py  color.py  console.py  dijkstra.py  heightmap.py  image.py  libtcod.py  libtcod_cdef.h  line.py  map.py  namegen.py  noise.py  parser.py  path.py  sys_.py  tdl_source.c  version.txt
tcod/: .clang-format  __init__.py  _bsp.py  _color.py  _console.py  _dijkstra.py  _heightmap.py  _image.py  _internal.py  _libtcod.pyi  _line.py  _map.py  _mouse.py  _namegen.py  _noise.py  _parser.py  _path.py  _random.py  _struct.py  _sys.py  bsp.py  cdef.h  cffi.h  cffi.py  color.py  console.py  constants.py  context.py  dijkstra.py  event.py  event_constants.py  heightmap.py  image.py  libtcod.py  libtcod_cdef.h  libtcodpy.py  line.py  loader.py  los.py  map.py  (+30 more)
tdl/: VERSION  VERSION.txt  __init__.py  __style.py  __tcod.py  __tcod_cffi.py  _libtcod.c  _tcod_cffi.py  ansi.py  build_libtcod.py  event.py  fov.py  libpng15.framework.tar  libtcod.py  map.py  noise.py  path.py  style.py  tcod.py  tdl_cdef.h  tdl_source.c  version.py
testing/: __init__.py  stressTest.py  test_parser.py  test_testing.py
tests/: common.py  conftest.py  test_console.py  test_deprecated.py  test_event.py  test_libtcodpy.py  test_map.py  test_noise.py  test_parser.py  test_random.py  test_sdl.py  test_sdl_audio.py  test_tcod.py  test_tdl.py  test_tdl_map.py  test_testing.py  test_tileset.py
trunk/: CHANGELOG.txt  MANIFEST  MANIFEST.in  README.txt  setup.py
unittest/: runTest.py
wiki/: Downloads.wiki
(+601 files in other folders)
