[build-system]
requires = [
    # Newer versions of setuptools break editable installs
    # https://github.com/pypa/setuptools/issues/3548
    "setuptools >=61.0.0, <64.0.0",
    "setuptools_scm[toml]>=6.2",
    "wheel>=0.37.1",
    "cffi>=1.15",
    "pycparser>=2.14",
    "pcpp==1.30",
    "requests>=2.28.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "tcod"
dynamic = ["version"]
description = "The official Python port of libtcod."
authors = [{ name = "Kyle Benesch", email = "4b796c65+tcod@gmail.com" }]
readme = "README.rst"
requires-python = ">=3.7"
license = { text = "Simplified BSD License" }
dependencies = [
    "cffi>=1.15",
    'numpy>=1.21.4; implementation_name != "pypy"',
    "typing_extensions",
]
keywords = [
    "roguelike",
    "cffi",
    "Unicode",
    "libtcod",
    "field-of-view",
    "pathfinding",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.entry-points.pyinstaller40]
hook-dirs = "tcod.__pyinstaller:get_hook_dirs"

[project.urls]
Homepage = "https://github.com/libtcod/python-tcod"
Documentation = "https://python-tcod.readthedocs.io"
Changelog = "https://github.com/libtcod/python-tcod/blob/main/CHANGELOG.md"
Source = "https://github.com/libtcod/python-tcod"
Tracker = "https://github.com/libtcod/python-tcod/issues"
Forum = "https://github.com/libtcod/python-tcod/discussions"

[tool.distutils.bdist_wheel]
py-limited-api = "cp37"

[tool.setuptools_scm]
write_to = "tcod/version.py"

[tool.black]
line-length = 120
target-version = ["py37"]

[tool.isort]
profile = "black"
py_version = "37"
skip_gitignore = true
line_length = 120

[tool.pytest.ini_options]
minversion = "6.0"
required_plugins = ["pytest-cov", "pytest-benchmark"]
testpaths = ["tcod/", "tests/", "docs/"]
addopts = [
    "--doctest-modules",
    "--doctest-glob='*.rst'",
    "--cov=tcod",
    "--capture=sys",
    "--ignore=tcod/__pyinstaller",
]
log_file_level = "DEBUG"
faulthandler_timeout = 5
filterwarnings = [
    "ignore::DeprecationWarning:tcod.libtcodpy",
    "ignore::PendingDeprecationWarning:tcod.libtcodpy",
    "ignore:This class may perform poorly and is no longer needed.::tcod.map",
    "ignore:'import tcod as libtcodpy' is preferred.",
]

[tool.mypy]
files = ["."]
python_version = 3.9
warn_unused_configs = true
show_error_codes = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
exclude = [
    "build/",
    "venv/",
    "libtcod/",
    "docs/",
    "distribution/",
    "termbox/",
    "samples_libtcodpy.py",
]

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tcod.version"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tcod._libtcod"
ignore_missing_imports = true

[tool.ruff]
# https://beta.ruff.rs/docs/rules/
select = [
    "C90", # mccabe
    "E",   # pycodestyle
    "W",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "RET", # flake8-return
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "PL",  # Pylint
    "TRY", # tryceratops
    "RUF", # NumPy-specific rules
    "G",   # flake8-logging-format
    "D",   # pydocstyle
]
ignore = [
    "E501",   # line-too-long
    "S101",   # assert
    "S301",   # suspicious-pickle-usage
    "S311",   # suspicious-non-cryptographic-random-usage
    "ANN101", # missing-type-self
    "ANN102", # missing-type-cls
    "D203",   # one-blank-line-before-class
    "D204",   # one-blank-line-after-class
    "D213",   # multi-line-summary-second-line
    "D407",   # dashed-underline-after-section
    "D408",   # section-underline-after-name
    "D409",   # section-underline-matches-section-length
]
extend-exclude = ["libtcod"] # Ignore submodule
line-length = 120

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "google"
