[options.entry_points]
pyinstaller40 =
  hook-dirs = tcod.__pyinstaller:get_hook_dirs

[bdist_wheel]
py-limited-api = cp36

[aliases]
test=pytest

[tool:pytest]
addopts=
    tcod/
    tests/
    --doctest-modules
    --cov=tcod
    --capture=sys
    --ignore=tcod/__pyinstaller
filterwarnings =
    ignore::DeprecationWarning:tcod.libtcodpy
    ignore::PendingDeprecationWarning:tcod.libtcodpy
    ignore:This class may perform poorly and is no longer needed.::tcod.map

[flake8]
ignore = E203 W503
max-line-length = 120

[mypy]
python_version = 3.8
warn_unused_configs = True
disallow_subclassing_any = True
disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
implicit_reexport = False
strict_equality = True
exclude = (build/|venv/|libtcod/|docs/|distribution/|termbox/|samples_libtcodpy.py)

[mypy-numpy]
ignore_missing_imports = True
